fixed overflow and background size

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-* {
+*,
+html {
     margin: 0;
     padding: 0;
     font-family: 'Nerko One', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -8,13 +9,15 @@ body {
     background-color: black;
     background-image: url(./photo-1518562923427-19e694fbd8e9.avif);
     background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat;
+    background-size: 100% auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    max-height: 90vh;
 }
+
 
 #content {
     display: flex;
